<resources>

    <string name="app_name">TIBIALIZER</string>

    <!--Main Activity-->
    <string name="main_connect_label">CONNECT</string>
    <string name="main_pulse_rate_label">PULSE RATE</string>
    <string name="greetings_name">Good Day, Maria!</string>
    <string name="greetings">Welcome to Tibializer!</string>
    <string name="about_label">What is TIBIALIZER</string>
    <string name="about">Tibializer is a pulse rate monitoring sock, made using a microcontroller chip and a heart rate sensor that connects to this app that makes it possible for this innovative pulse sensor accessory. For its utilization, the device must be worn as a sock that reaches the user\'s ankle, where the sensor would detect the pulse in the posterior tibial artery. Then, it will send the data to the accompanying mobile-app in real time that notifies and updates their pulse rate through their smartphone. This aims to assist people suffering from heart problems or cardiovascular diseases in going about their daily lives. Although this device cannot cure, it intends to provide an early warning in case of any anomalies or deviations from the normal range and reduce the number of fatalities caused by cardiovascular disease worldwide.</string>

    <!--Activity Connect Bluetooth-->
    <string name="btn_switch">Enable</string>
    <string name="not_connected_label">Not Connected</string>
    <string name="label_paired_devices">Paired Device(s)</string>
    <string name="btn_scan_devices">Scan Available Devices</string>
    <string name="txt_available_devices_label">Available device(s)</string>

    <!--Activity Pulse Rate-->
    <string name="heart_rate_default">167</string>
    <string name="heart_rate_label">BPM</string>
    <string name="heart_rate_note">Measuring Heart Rate...</string>
    <string name="average_label">AVERAGE</string>

    <!-- Device List Adapter -->
    <string name="default_device_name">Galaxy Nexus</string>
    <string name="default_device_address">000000000</string>
    <string name="btn_device_paired">PAIR</string>

    <!--User Profile Activity-->
    <string name="profile_label">Profile</string>
    <string name="name_label">Name</string>
    <string name="age_label">Age</string>
    <string name="birthday_label">Birthday</string>
    <string name="sex_label">Sex</string>
    <string name="Contact_number_label">Contact Number</string>
    <string name="address_label">Address</string>
    <string name="emergency_contact_label">Emergency Contacts</string>
    <string name="date_format">mm/dd/yyyy</string>
    <string name="save_label">Save</string>
    <string-array name="sex">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>


    <!--Alert Design-->
    <string name="warning_label">WARNING!</string>
    <string name="waning_description1">We have detected that your pulse rate</string>
    <string name="waning_description2">rate is in critical condition</string>
    <string name="warning_footer1">Would you like to call your emergency</string>
    <string name="warning_footer2">contact?</string>
    <string name="warning_button_yes">YES</string>
    <string name="warning_button_no">NO</string>

</resources>