<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Connect">

    <ScrollView
        android:id="@+id/bt_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <Switch
                android:id="@+id/bt_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/btn_switch"
                android:textColor="#008b99"
                android:trackTint="@drawable/newtrack"
                android:thumbTint="@drawable/newthumb"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bt_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/not_connected_label"
                android:textColor="#008b99" />

            <TextView
                android:id="@+id/txt_paired"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:text="@string/label_paired_devices"
                android:textColor="#008b99" />

            <ListView
                android:id="@+id/lv_paired"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1">

            </ListView>

            <Button
                android:id="@+id/btn_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_button"
                android:text="@string/btn_scan_devices"
                android:textColor="#eeffff" />

            <TextView
                android:id="@+id/txt_available"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/txt_available_devices_label"
                android:textColor="#008b99" />

            <ListView
                android:id="@+id/lv_available"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>