<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".PulseRate">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="305dp"
                android:layout_margin="20dp"
                android:background="@drawable/pulse_rate_bg"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/heart_rate"
                    android:layout_width="match_parent"
                    android:layout_height="166dp"
                    android:layout_marginTop="50dp"
                    android:gravity="center"
                    android:text="@string/heart_rate_default"
                    android:textSize="110sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/pulserate_icon"
                    app:tint="#ff0000" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center|center_horizontal"
                    android:text="@string/heart_rate_label" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/heart_rate_note"
                    android:textColor="@color/card_view_blue_label"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/heart_rate_indicator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/average_label"
                    android:textColor="#ffde59"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>